--- a/app/src/main/res/layout/layout_registration_step_one.xml
+++ b/app/src/main/res/layout/layout_registration_step_one.xml
@@ -55,10 +55,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_40sdp"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:inputType="numberSigned"
+                android:inputType="numberPassword"
                 android:maxLength="15"
                 android:maxLines="1"
-                android:digits="0123456789"
                 android:hint="@string/phone_no"
                 android:textColorHint="@color/color_gray_text"
                 android:textColor="@color/textColors"
