--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -250,8 +250,7 @@
                 android:fontFamily="@font/montserrat"
                 android:text="@string/withdraw"
                 android:textAllCaps="false"
-                android:textColor="@color/colorWhite"
-                android:textStyle="bold"
+                android:textColor="@color/colorPrimaryDark"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
