--- a/app/src/main/res/layout/content_change_login_pin.xml
+++ b/app/src/main/res/layout/content_change_login_pin.xml
@@ -115,7 +115,7 @@
                     android:layout_width="0dp"
                     android:layout_height="@dimen/_27sdp"
                     android:text="@string/submit"
-                    android:textAllCaps="false"
+                    android:textAllCaps="true"
                     android:layout_marginTop="@dimen/_10sdp"
                     android:textColor="@color/colorPrimary"
                     android:background="@drawable/ripple_green_button"
@@ -133,9 +133,9 @@
                     android:text="@string/cancel"
                     android:layout_marginTop="@dimen/_20sdp"
                     android:background="@drawable/bg_grey_view"
-                    android:textAllCaps="false"
+                    android:textAllCaps="true"
                     android:layout_marginBottom="@dimen/_10sdp"
-                    android:textColor="@color/light_text_color"
+                    android:textColor="@color/colorGreyDeep"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
