--- a/app/src/main/res/layout/content_change_pin.xml
+++ b/app/src/main/res/layout/content_change_pin.xml
@@ -126,8 +126,8 @@
                 android:layout_marginBottom="@dimen/_10sdp"
                 android:background="@drawable/ripple_green_button"
                 android:text="@string/submit"
-                android:textAllCaps="false"
-                android:textColor="@color/colorPrimaryDark"
+                android:textAllCaps="true"
+                android:textColor="@color/colorPrimary"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/buttonCancel"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -141,8 +141,8 @@
                 android:layout_marginTop="@dimen/_10sdp"
                 android:background="@drawable/bg_grey_view"
                 android:text="@string/cancel"
-                android:textAllCaps="false"
-                android:textColor="@color/light_text_color"
+                android:textAllCaps="true"
+                android:textColor="@color/colorGreyDeep"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
