--- a/app/src/main/res/layout/content_investment_apply.xml
+++ b/app/src/main/res/layout/content_investment_apply.xml
@@ -106,10 +106,10 @@
                     android:layout_marginBottom="@dimen/_18sdp"
                     android:background="@drawable/ripple_green_button"
                     android:fontFamily="@font/montserrat"
+                    android:textSize="@dimen/_12sdp"
                     android:text="@string/deposit"
-                    android:textAllCaps="false"
+                    android:textAllCaps="true"
                     android:textColor="@color/colorPrimary"
-                    android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
