--- a/app/src/main/res/layout/content_loan_apply.xml
+++ b/app/src/main/res/layout/content_loan_apply.xml
@@ -120,7 +120,7 @@
                     android:layout_height="@dimen/_27sdp"
                     android:background="@drawable/ripple_green_button"
                     android:text="@string/apply"
-                    android:textAllCaps="false"
+                    android:textAllCaps="true"
                     style="?android:attr/borderlessButtonStyle"
                     android:layout_marginBottom="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_10sdp"
@@ -139,7 +139,7 @@
                     style="?android:attr/borderlessButtonStyle"
                     android:text="@string/cancel"
                     android:layout_marginTop="@dimen/_10sdp"
-                    android:textAllCaps="false"
+                    android:textAllCaps="true"
                     android:layout_marginBottom="@dimen/_10sdp"
                     android:textColor="@color/colorGreyDeep"
                     android:background="@drawable/bg_grey_view"
