--- a/app/src/main/res/layout/content_profile_edit_business_info.xml
+++ b/app/src/main/res/layout/content_profile_edit_business_info.xml
@@ -146,7 +146,7 @@
                 android:background="@drawable/ripple_green_button"
                 android:fontFamily="@font/montserrat"
                 android:text="@string/submit"
-                android:textAllCaps="false"
+                android:textAllCaps="true"
                 android:textColor="@color/colorPrimaryDark"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/buttonCancel"
@@ -163,9 +163,9 @@
                 android:layout_marginBottom="@dimen/_5sdp"
                 android:background="@drawable/bg_grey_view"
                 android:text="@string/cancel"
-                android:textAllCaps="false"
+                android:textAllCaps="true"
                 android:fontFamily="@font/montserrat"
-                android:textColor="@color/colorGrey"
+                android:textColor="@color/colorGreyDeep"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
