--- a/app/src/main/res/layout/content_profile_edit_personal.xml
+++ b/app/src/main/res/layout/content_profile_edit_personal.xml
@@ -321,7 +321,7 @@
                         android:background="@drawable/btn_round"
                         android:fontFamily="@font/montserrat"
                         android:text="@string/submit"
-                        android:textAllCaps="false"
+                        android:textAllCaps="true"
                         android:textColor="@color/colorPrimary"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -333,11 +333,11 @@
                         android:id="@+id/buttonCancel"
                         android:layout_width="@dimen/_120sdp"
                         android:layout_height="@dimen/_25sdp"
-                        android:layout_marginBottom="4dp"
+                        android:layout_marginBottom="@dimen/_4sdp"
                         android:background="@drawable/bg_grey_view"
                         android:fontFamily="@font/montserrat"
                         android:text="@string/cancel"
-                        android:textAllCaps="false"
+                        android:textAllCaps="true"
                         android:textColor="@color/colorGrey"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
