--- a/app/src/main/res/layout/fragment_token_transfer.xml
+++ b/app/src/main/res/layout/fragment_token_transfer.xml
@@ -94,11 +94,12 @@
                 <Button
                     android:id="@+id/buttonTransfer"
                     android:layout_width="0dp"
-                    android:layout_height="@dimen/_32sdp"
+                    android:layout_height="@dimen/_35sdp"
                     android:layout_margin="@dimen/_10sdp"
                     android:background="@drawable/ripple_green_button"
+                    android:textSize="@dimen/_12sdp"
                     android:text="@string/transfer"
-                    android:textAllCaps="false"
+                    android:textAllCaps="true"
                     android:textColor="@color/colorPrimaryDark"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
