--- a/app/src/main/res/layout/content_set_up_pin.xml
+++ b/app/src/main/res/layout/content_set_up_pin.xml
@@ -96,7 +96,7 @@
                     android:layout_marginBottom="@dimen/_10sdp"
                     android:background="@drawable/ripple_green_button"
                     android:text="@string/submit"
-                    android:textAllCaps="false"
+                    android:textAllCaps="true"
                     android:textColor="@color/colorPrimaryDark"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/buttonCancel"
@@ -111,7 +111,7 @@
                     android:layout_marginTop="@dimen/_10sdp"
                     android:background="@drawable/bg_grey_view"
                     android:text="@string/cancel"
-                    android:textAllCaps="false"
+                    android:textAllCaps="true"
                     android:textColor="@color/light_text_color"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
