--- a/app/src/main/res/layout/fragment_loan_calculator.xml
+++ b/app/src/main/res/layout/fragment_loan_calculator.xml
@@ -46,6 +46,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_42sdp"
                     android:hint="@string/choose_loan_type"
+                    android:fontFamily="@font/montserrat"
                     android:focusable="false"
                     android:inputType="none"
                     android:cursorVisible="false"
@@ -87,6 +88,7 @@
                     android:layout_height="@dimen/_42sdp"
                     android:focusable="false"
                     android:inputType="none"
+                    android:fontFamily="@font/montserrat"
                     android:cursorVisible="false"
                     android:hint="@string/choose_option"
                     android:textColor="@color/textColors"
