--- a/app/src/main/res/layout/fragment_business_id_layout.xml
+++ b/app/src/main/res/layout/fragment_business_id_layout.xml
@@ -163,7 +163,7 @@
                     android:background="@drawable/ripple_green_button"
                     android:fontFamily="@font/montserrat"
                     android:text="@string/submit"
-                    android:textAllCaps="false"
+                    android:textAllCaps="true"
                     android:textColor="@color/colorPrimary"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -181,8 +181,8 @@
                     android:background="@drawable/bg_grey_view"
                     android:fontFamily="@font/montserrat"
                     android:text="@string/cancel"
-                    android:textAllCaps="false"
-                    android:textColor="@color/colorGrey"
+                    android:textAllCaps="true"
+                    android:textColor="@color/colorGreyDeep"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/buttonSubmit"
