--- a/app/src/main/res/layout/layout_payment_schedule.xml
+++ b/app/src/main/res/layout/layout_payment_schedule.xml
@@ -249,7 +249,7 @@
                         android:textColor="@color/colorWhite"
                         android:textSize="@dimen/_10sdp"
                         android:text="@string/pay_now"
-                        android:textAllCaps="false"
+                        android:textAllCaps="true"
 
                         />
             </LinearLayout>
