--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -373,6 +373,7 @@
                             android:layout_marginTop="@dimen/_5sdp"
                             android:layout_marginBottom="@dimen/_5sdp"
                             android:contentDescription="@string/app_name"
+                            app:srcCompat="@drawable/ic_user"
                             app:civ_border_width="0dp"
                             app:civ_background_color="@android:color/white"
                             app:civ_border_color="@android:color/white"
@@ -731,7 +732,7 @@
                             android:layout_marginBottom="@dimen/_10sdp"
                             android:contentDescription="@string/app_name"
                             android:scaleType="fitXY"
-                            android:src="@drawable/ic_id_no_image"
+                            app:srcCompat="@drawable/ic_id_no_image"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toStartOf="@+id/imageView13"
                             app:layout_constraintStart_toStartOf="parent"
