--- a/app/src/main/res/layout/content_profile_edit_business_info.xml
+++ b/app/src/main/res/layout/content_profile_edit_business_info.xml
@@ -145,6 +145,7 @@
                 android:layout_marginBottom="@dimen/_5sdp"
                 android:background="@drawable/ripple_green_button"
                 android:fontFamily="@font/montserrat"
+                android:textStyle="bold"
                 android:text="@string/submit"
                 android:textAllCaps="true"
                 android:textColor="@color/colorPrimaryDark"
@@ -163,6 +164,7 @@
                 android:layout_marginBottom="@dimen/_5sdp"
                 android:background="@drawable/bg_grey_view"
                 android:text="@string/cancel"
+                android:textStyle="bold"
                 android:textAllCaps="true"
                 android:fontFamily="@font/montserrat"
                 android:textColor="@color/colorGreyDeep"
