--- a/app/src/main/res/layout/content_change_login_pin.xml
+++ b/app/src/main/res/layout/content_change_login_pin.xml
@@ -117,7 +117,7 @@
                     android:text="@string/submit"
                     android:textAllCaps="true"
                     android:layout_marginTop="@dimen/_10sdp"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/colorPrimaryDark"
                     android:background="@drawable/ripple_green_button"
                     android:layout_marginEnd="@dimen/_20sdp"
                     app:layout_constraintBottom_toBottomOf="parent"
