--- a/app/src/main/res/layout/activity_lpk_savings.xml
+++ b/app/src/main/res/layout/activity_lpk_savings.xml
@@ -27,7 +27,7 @@
             android:layout_width="@dimen/_25sdp"
             android:layout_height="@dimen/_22sdp"
             android:layout_gravity="end"
-            android:src="@drawable/ic_filter"
+            app:srcCompat="@drawable/ic_filter"
             android:layout_marginEnd="@dimen/_12sdp"
             android:visibility="invisible"
             android:background="?attr/selectableItemBackgroundBorderless"
