--- a/app/src/main/res/layout/layout_settings_item.xml
+++ b/app/src/main/res/layout/layout_settings_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -57,7 +58,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight=".10"
-                android:src="@drawable/ic_right_arrow"
+                app:srcCompat="@drawable/ic_right_arrow"
                 android:scaleType="center"
                 />
 
