--- a/app/src/main/res/layout/snackbar_error.xml
+++ b/app/src/main/res/layout/snackbar_error.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center"
     android:id="@+id/rlRoot"
     android:background="@color/colorRed"
     android:layout_height="wrap_content"
-    android:padding="@dimen/_5sdp"
-    >
+    android:padding="@dimen/_5sdp">
 
     <ImageView
         android:id="@+id/imgCaution"
         android:contentDescription="@string/app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_error_yellow"
+        app:srcCompat="@drawable/ic_error_yellow"
         android:layout_marginStart="@dimen/_3sdp"
 
         />
