--- a/app/src/main/res/layout/content_profile_edit_personal.xml
+++ b/app/src/main/res/layout/content_profile_edit_personal.xml
@@ -318,7 +318,7 @@
                         android:layout_height="@dimen/_25sdp"
                         android:layout_marginTop="@dimen/_7sdp"
                         android:layout_marginBottom="4dp"
-                        android:background="@drawable/btn_round"
+                        android:background="@drawable/ripple_green_button"
                         android:fontFamily="@font/montserrat"
                         android:text="@string/submit"
                         android:textAllCaps="true"
@@ -338,7 +338,7 @@
                         android:fontFamily="@font/montserrat"
                         android:text="@string/cancel"
                         android:textAllCaps="true"
-                        android:textColor="@color/colorGrey"
+                        android:textColor="@color/colorGreyDeep"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/imageView10"
