--- a/app/src/main/res/layout/fragment_token_withdrawal.xml
+++ b/app/src/main/res/layout/fragment_token_withdrawal.xml
@@ -109,10 +109,11 @@
                 android:layout_height="@dimen/_30sdp"
                 android:layout_marginTop="@dimen/_12sdp"
                 android:layout_marginBottom="@dimen/_22sdp"
-                android:background="@drawable/btn_round"
+                android:background="@drawable/ripple_green_button"
                 android:fontFamily="@font/montserrat"
                 android:text="@string/submit"
-                android:textAllCaps="false"
+                android:textAllCaps="true"
+                android:textSize="@dimen/_12sdp"
                 android:textColor="@color/colorPrimary"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
