--- a/app/src/main/res/layout/fragment_wallet_address.xml
+++ b/app/src/main/res/layout/fragment_wallet_address.xml
@@ -104,10 +104,11 @@
                 android:layout_width="@dimen/_130sdp"
                 android:layout_height="@dimen/_30sdp"
                 android:layout_marginTop="@dimen/_14sdp"
-                android:background="@drawable/btn_round"
+                android:background="@drawable/ripple_green_button"
                 android:fontFamily="@font/montserrat"
                 android:text="@string/update"
-                android:textAllCaps="false"
+                android:textAllCaps="true"
+                android:textSize="@dimen/_12sdp"
                 android:textColor="@color/colorPrimary"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/txtEtherScan"
