--- a/app/src/main/res/layout/fragment_token_transfer.xml
+++ b/app/src/main/res/layout/fragment_token_transfer.xml
@@ -97,6 +97,7 @@
                     android:layout_height="@dimen/_35sdp"
                     android:layout_margin="@dimen/_10sdp"
                     android:background="@drawable/ripple_green_button"
+                    android:fontFamily="@font/montserrat"
                     android:textSize="@dimen/_12sdp"
                     android:text="@string/transfer"
                     android:textAllCaps="true"
