--- a/app/src/main/res/layout/fragment_token_transfer.xml
+++ b/app/src/main/res/layout/fragment_token_transfer.xml
@@ -101,6 +101,7 @@
                     android:textSize="@dimen/_12sdp"
                     android:text="@string/transfer"
                     android:textAllCaps="true"
+                    android:textStyle="bold"
                     android:textColor="@color/colorPrimaryDark"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
