--- a/app/src/main/res/layout/activity_registration_step_one.xml
+++ b/app/src/main/res/layout/activity_registration_step_one.xml
@@ -27,17 +27,19 @@
                 android:id="@+id/txtCountry"
                 android:visibility="invisible"
                 android:contentDescription="@string/app_name"
-                android:layout_width="wrap_content"
+                android:layout_width="@dimen/_75sdp"
                 android:layout_height="match_parent"
+                android:singleLine="true"
+                android:ellipsize="middle"
                 android:gravity="center"
                 android:layout_gravity="end"
-                android:layout_marginEnd="@dimen/_10sdp"
+                android:layout_marginEnd="@dimen/_5sdp"
                 android:textColor="@color/colorWhite"
                 android:focusable="true"
-                android:textSize="@dimen/_12sdp"
+                android:textSize="@dimen/_10sdp"
                 android:textAllCaps="true"
                 android:drawableEnd="@drawable/ic_dropdown_white_icon"
-                android:drawablePadding="@dimen/_3sdp"
+                android:drawablePadding="@dimen/_2sdp"
                 android:textStyle="bold"
 
                 />
