--- a/app/src/main/res/layout/content_profile_edit_personal.xml
+++ b/app/src/main/res/layout/content_profile_edit_personal.xml
@@ -248,6 +248,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_7sdp"
+                        android:textSize="@dimen/_10sdp"
                         android:fontFamily="@font/montserrat"
                         android:text="@string/upload_profile_image"
                         android:textColor="@color/colorPrimary"
@@ -279,6 +280,7 @@
                         android:layout_marginTop="@dimen/_7sdp"
                         android:fontFamily="@font/montserrat"
                         android:text="@string/edit_gender"
+                        android:textSize="@dimen/_10sdp"
                         android:textColor="@color/colorPrimary"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/imageView10"
