--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -373,7 +373,7 @@
                             android:layout_marginTop="@dimen/_5sdp"
                             android:layout_marginBottom="@dimen/_5sdp"
                             android:contentDescription="@string/app_name"
-                            app:srcCompat="@drawable/ic_user"
+                            android:background="@drawable/ic_user"
                             app:civ_border_width="0dp"
                             app:civ_background_color="@android:color/white"
                             app:civ_border_color="@android:color/white"
