--- a/app/src/main/res/layout/fragment_lpk.xml
+++ b/app/src/main/res/layout/fragment_lpk.xml
@@ -207,21 +207,80 @@
 
     </androidx.cardview.widget.CardView>
 
-    <com.app.l_pesa.common.CustomButtonRegular
-        android:id="@+id/bitmart"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_40sdp"
-        android:layout_marginTop="@dimen/_15sdp"
-        android:background="@drawable/bg_button_app"
-        android:fontFamily="@font/montserrat"
-        android:text="BITMART"
-        android:textAllCaps="true"
-        android:textSize="@dimen/_12sdp"
-        android:textColor="@color/colorWhite"
-        android:textStyle="bold"
-        android:layout_marginStart="@dimen/_10sdp"
-        android:layout_marginEnd="@dimen/_10sdp"
-        />
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="@dimen/_3sdp"
+        android:layout_margin="@dimen/_7sdp"
+
+        >
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintTreading"
+            android:focusable="true"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="@dimen/_10sdp">
+
+
+            <ImageView
+                android:id="@+id/imgTreading"
+                android:contentDescription="@string/app_name"
+                android:layout_width="@dimen/_100sdp"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/_3sdp"
+                android:scaleType="fitXY"
+                android:adjustViewBounds="true"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:src="@drawable/bitmart_logo" />
+
+            <com.app.l_pesa.common.CommonTextRegular
+                android:id="@+id/textView24"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_15sdp"
+                android:layout_marginTop="@dimen/_20sdp"
+                android:text="@string/lpk"
+                android:textColor="@color/color_deep_gold"
+                android:textSize="@dimen/_19sdp"
+                app:layout_constraintBottom_toTopOf="@+id/textView25"
+                app:layout_constraintEnd_toStartOf="@+id/imgNextTreading"
+                app:layout_constraintStart_toEndOf="@+id/imgTreading"
+                app:layout_constraintTop_toTopOf="@+id/imgTreading" />
+
+            <com.app.l_pesa.common.CommonTextRegular
+                android:id="@+id/textView25"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_15sdp"
+                android:layout_marginBottom="@dimen/_20sdp"
+                android:text="@string/trading"
+                android:textSize="@dimen/_16sdp"
+                android:textColor="@color/dark_text_color"
+                app:layout_constraintBottom_toBottomOf="@+id/imgTreading"
+                app:layout_constraintEnd_toStartOf="@+id/imgNextTreading"
+                app:layout_constraintStart_toEndOf="@+id/imgTreading"
+                app:layout_constraintTop_toBottomOf="@+id/textView24" />
+
+               <ImageView
+                android:id="@+id/imgNextTreading"
+                android:contentDescription="@string/app_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_go_arrow"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+
+                />
+
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
 </androidx.core.widget.NestedScrollView>
